# rlrmp

./: .gitignore  .issue  .worktree.yaml  AGENTS.md  CLAUDE.md  README.md  TODO-analysis.md  TODO.md  generate_static_viz.py  mandible.toml  ops  pyproject.toml
src/rlrmp/: __init__.py  _debug.py  _logging.py  _warnings.py  adversarial_training.py  adversary.py  artifact_migration.py  colors.py  constants.py  cs_lss_gru.py  database.py  disturbance.py  disturbances.py  fb_response.py  feedbax_channel_adapters.py  feedbax_graph.py  figures.py  hyperparams.py  intervention_compat.py  io.py  lme.py  local_parallel_benchmark.py  loss.py  loss_presets.py  loss_vocabulary.py  mappings.py  misc.py  modal_artifact_sync.py  modal_packing_benchmark.py  modal_runner.py  models.py  packing_benchmark.py  paths.py  perturbations.py  plot.py  plot_utils.py  profile_payloads.py  pyproject.toml  run_spec_identity.py  run_specs.py  (+11 more)
src/rlrmp/analysis/: __init__.py  _dependencies.py  activity.py  adversary_equivalence.py  aligned.py  analysis.py  bridge_aggregation.py  bridge_certificates.py  bridge_contracts.py  bridge_controllers.py  bridge_results.py  broad_epsilon_attribution.py  cs_game_card.py  cs_gru_standard_materialization.py  cs_released_simulation.py  cs_stochastic_phase1.py  cs_stochastic_phase3.py  declarative_materialization.py  delayed_diagnostic_bundle.py  delayed_reach_eval_bank.py  diagnostic_provenance.py  disturbance.py  effector.py  eig.py  execution.py  failure_decomposition.py  feedbax_controllers.py  feedbax_parity.py  fp_finder.py  fps.py  fps_tmp.py  fps_tmp2.py  frozen_adversary_audit.py  frozen_policy_gate.py  func.py  grad.py  gru_broad_epsilon_attribution.py  gru_checkpoint_selection.py  gru_evaluation_diagnostics.py  gru_feedback_ablation.py  (+55 more)
src/rlrmp/analysis/data_products/: __init__.py  cross_method_baselines.py  parameter_presets.py
src/rlrmp/analysis/math/: __init__.py  adversary_equivalence.py  (+10 more)
src/rlrmp/benchmarks/: __init__.py  _common.py  local_parallel.py  packing.py  postrun_eval_materialization.py
src/rlrmp/cloud/: __init__.py  modal_artifact_sync.py  modal_runner.py
src/rlrmp/config/: __init__.py  _defaults.yml  batch.py  config.py  logging.yml  paths.yml  plotly.yml  prng.yml  strings.yml
src/rlrmp/controllers/: __init__.py  linear.py
src/rlrmp/data_products/: __init__.py  ast_walk.py  broad_epsilon.py  calibration.py  calibration_computation.py  data_in_code.py  envelope.py  lint.py  registry.py
src/rlrmp/eval/: __init__.py  broad_epsilon.py  checkpoint_selection.py  ensemble.py  evaluation_diagnostics.py  feedback_ablation.py  gru_diagnostics.py  kinematics.py  legacy_checkpoints.py  linear_recurrent_augmented_reference.py  linear_recurrent_certificate.py  minimax_io.py  model_slots.py  objective_terms.py  output_feedback_rollout_recovery.py  pert.py  perturbation_bank.py  policy_diagnostics.py  recipes.py  recurrent_jacobians.py  replicates.py  robustness_diagnostics.py  rollout_states.py  sisu.py  sisu_spectrum.py  steady_state.py  trial_inputs.py  velocity_profiles.py
src/rlrmp/model/: __init__.py  bridge_controllers.py  cs_lss_contracts.py  cs_lss_gru.py  cs_lss_static_linear.py  cs_mechanics.py  factory.py  feedback_descriptors.py  feedbax_channel_adapters.py  feedbax_graph.py  presets.py  stochastic_runtime.py  trainable.py
src/rlrmp/networks/: __init__.py  linear_controllers.py
src/rlrmp/runtime/: __init__.py  adaptive_checkpoint_adapter.py  baseline_custody_repair.py  checkpoint_custody.py  checkpoint_fork_gate.py  defaults_scan.py  feedbax_contract_versions.py  graph_spec_migrations.py  import_lint.py  jax_config.py  lr_continuation.py  parameter_presets.py  params_models.py  realized_lr_guard.py  run_spec_access.py  run_specs.py  spec_migrations.py  spec_storage.py  studio_records.py  training_run_specs.py
src/rlrmp/train/: __init__.py  adaptive_epsilon_native.py  adversarial_training.py  adversary.py  broad_epsilon_training.py  closed_loop_distillation.py  closed_loop_finite_adversary.py  config_cli.py  config_materialization.py  cs_nominal_gru.py  cs_perturbation_training.py  delayed_reach.py  distillation.py  distillation_entry.py  distillation_native.py  execution_preparation.py  feedbax_cli_rows.py  fixed_target_perturbation_training.py  fixture_orchestration.py  gru_training_base.py  guided_distillation.py  heterogeneous_training_matrix.py  launch.py  linear_recurrent_native.py  matrix_lowering.py  matrix_materialization.py  minimax.py  minimax_native.py  minimax_resume.py  native_manifest.py  orchestrated_post_run.py  orchestrated_row.py  orchestration_capabilities.py  orchestration_compiler.py  orchestration_drivers.py  orchestration_inputs.py  orchestration_manifest_index.py  policy_adversary_native.py  progress.py  resume_control.py  (+11 more)
src/rlrmp/training/: __init__.py  loss.py  post_training.py  train.py
src/rlrmp/viz/: __init__.py  color_config.py  colors.py  figures.py  loss_viz.py  profile_grids.py  traces.py
(+2453 files in other folders)
