[project]
name = "rlrmp"
version = "0.1.0"
description = ""
authors = [
    {name = "MLL", email = "mll@mll.bio"}
]
requires-python = ">=3.12"
dependencies = [
    "feedbax>=0.2.0",
    "statsmodels>=0.14.5",
]

[project.entry-points."feedbax.packages"]
rlrmp = "rlrmp:register_experiment_package"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/rlrmp"]

[tool.hatch.build.targets.wheel]
packages = ["src/rlrmp"]

[tool.uv]
config-settings = { editable-mode = "compat" }

[tool.uv.sources.feedbax]
path = "../20 Feedbax/feedbax-merge-workspace"
editable = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Equinox array annotations
ignore = ["F722"]  
# Prevent removal of unused imports
unfixable = ["F401"]  

[tool.ruff.format]
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv", "archive", "manuscript", "results", "docs"]
typeCheckingMode = "standard"
verboseOutput = true
reportMissingImports = true
