[project]
name = "rlrmp"
version = "0.1.0"
description = ""
authors = [
    {name = "MLL", email = "mll@mll.bio"}
]
requires-python = ">=3.12"
dependencies = [
    "feedbax",
    "ipyfilechooser>=0.6.0",
    "ipywidgets>=8.1.8",
    "statsmodels>=0.14.5",
]

[project.entry-points."feedbax.plugins"]
rlrmp = "rlrmp:register_experiment_package"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/rlrmp"]

[tool.hatch.build.targets.wheel]
packages = ["src/rlrmp"]

[tool.uv]
config-settings = { editable-mode = "compat" }

[tool.uv.sources.feedbax]
# Point at feedbax develop worktree (the protected branch). The
# OutputJerkLoss term used by efc4d68 lands on develop via feedbax
# auth-merge of feature/loss-output-jerk (feedbax issue 7e1d257) —
# the rlrmp auth-merge depends on that feedbax merge having landed first.
path = "/Users/mll/Main/10 Projects/10 PhD/20 Feedbax/feedbax/worktrees/develop"
editable = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Equinox array annotations
ignore = ["F722"]  
# Prevent removal of unused imports
unfixable = ["F401"]  

[tool.ruff.lint.per-file-ignores]
# Scripts often need to run things before importing more things
"src/rlrmp/bin/*.py" = ["E402"] 

[tool.ruff.format]
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv", "archive", "manuscript", "results", "docs"]
typeCheckingMode = "standard"
verboseOutput = true
reportMissingImports = true
