[project]
name = "rlrmp"
version = "0.1.0"
description = "RNNs Learn Robust Motor Policies - Experiment Package"
authors = [
    {name = "MLL", email = "mll@mll.bio"}
]
requires-python = ">=3.12"
dependencies = [
    "feedbax-experiments>=0.1.0",
]

[project.entry-points."feedbax_experiments.packages"]
rlrmp = "rlrmp:register_experiment_package"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/rlrmp"]

[tool.hatch.build.targets.wheel]
packages = ["src/rlrmp"]